# cpp-cv-template

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
src/: main.cpp
